# mcbecreatortools-cpp

./: CMakeLists.txt  entity.js  item.js  manifest.js  obfuscator.js  uuid_generator_class.js
cxxlibs/: entity  entity.hpp  file_management  file_management.cpp  file_management.hpp  float_representation  float_representation.cpp  item.hpp  item_verify_identifier  item_verify_identifier.cpp  item_write_item  item_write_item.cpp  make_json  make_json.cpp  make_json.hpp  manifest  manifest.cpp  manifest.hpp  obfuscator  obfuscator.cpp  obfuscator.hpp  obfuscator_test.json  read_json  uuid_generator  uuid_generator.cpp
generate_libs/: CMakeLists.txt  all_in_one_test.cpp  entity.cpp  entity.hpp  file_management.cpp  file_management.h  file_management.hpp  generate_libs.cpp  item.cpp  item.hpp  make_json.cpp  make_json.h  make_json.hpp  manifest.cpp  manifest.hpp  obfuscator.cpp  obfuscator.hpp  poorlyexecuted.txt  read_json.cpp  uuid_generator.cpp  uuid_generator.h  uuid_generator.hpp
minizip/: CMakeLists.txt
tests/: all_in_one_test.cpp
